<resources>
    <string name="app_name">LeaveMeAloneApplication</string>
    <string name="AppTitle">Leave Me Alone</string>
    <string name="mainCurrentLux">현재 조도 : 1,000 Lux</string>
    <string name="mainLuxRange">(0 ~ 65,535 Lux)</string>
    <string name="mainCurrentHumidity">현재 습도 : 50%</string>
    <string name="mainWaterButtonText">수분 관리</string>
    <string name="mainBulbButtonText">조명 관리</string>
    <string name="mainCommunicationText">통신</string>
    <string name="pleaseInput">내용을 입력해주세요.</string>
    <string name="lightControlCurrentLuxGoalTitle">현재 조도 목표치</string>
    <string name="exampleGoalLux">1,000 Lux</string>
    <string name="chlorophyllBContent">엽록소 B 함량</string>
    <string name="saveBtnText">설정 저장</string>
    <string name="communicationPageBtn">APP-Raspberry Pi\nConnection</string>
</resources>