<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainPageTitle"
        android:layout_width="254dp"
        android:layout_height="74dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="567dp"
        android:gravity="center"
        android:text="@string/AppTitle"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mainCurrentLux"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:minLines="2"
        android:text="@string/mainCurrentLux"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mainCurrentHumidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPageTitle"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/mainCurrentHumidity"
        android:layout_width="290dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/mainCurrentHumidity"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLuxRange" />

    <ImageButton
        android:id="@+id/mainWaterControlButton"
        android:layout_width="73dp"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="222dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainLightControlButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCurrentHumidity"
        app:srcCompat="@drawable/water_drop" />

    <TextView
        android:id="@+id/mainLuxRange"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/mainLuxRange"
        android:textColor="#000000"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mainCurrentHumidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCurrentLux"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/mainLightControlButton"
        android:layout_width="73dp"
        android:layout_height="94dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="222dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCurrentHumidity"
        app:srcCompat="@drawable/bulb" />

    <ImageButton
        android:id="@+id/mainCommunicationButton"
        android:layout_width="75dp"
        android:layout_height="78dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="222dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainLightControlButton"
        app:layout_constraintTop_toBottomOf="@+id/mainCurrentHumidity"
        app:srcCompat="@drawable/communication" />

    <TextView
        android:id="@+id/mainWaterButtonText"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="150dp"
        android:text="@string/mainWaterButtonText"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainWaterControlButton" />

    <TextView
        android:id="@+id/mainBulbButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="200dp"
        android:text="@string/mainBulbButtonText"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLightControlButton" />

    <TextView
        android:id="@+id/mainCommunicationText"
        android:layout_width="37dp"
        android:layout_height="28dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="166dp"
        android:text="@string/mainCommunicationText"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainBulbButtonText"
        app:layout_constraintTop_toBottomOf="@+id/mainCommunicationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>