<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LightManagement">

    <TextView
        android:id="@+id/lightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/mainBulbButtonText"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/lightControlCurrentLuxGoalTitle"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightTitle" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/exampleGoalLux"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/mainLuxRange"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:text="새 조도 목표치 (Lux)"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pleaseInput"
        android:inputType="textPersonName"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/chlorophyllBContent"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="center"> <!-- this attribute is from the underlying FlexboxLayout -->

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_text="5:30PM" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_text="7:30PM" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            app:toggle_text="8:00PM" />

    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/chlorophyllBContent"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="48dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tbgCheckedButton="@+id/choice_a">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/choice_a"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="적음"
            android:textSize="25dp"
            app:toggle_selectedBackgroundColor="#5E6FED" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/choice_b"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="보통"
            android:textSize="25dp" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/choice_c"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="많음"
            android:textSize="25dp" />

        <!--...-->

    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="60dp"
        android:text="전구"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintBottom_toTopOf="@+id/chlorophyllBContent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>